--- a/PrimeiroProjetoPrimeFaces/.gitignore
+++ b/PrimeiroProjetoPrimeFaces/.gitignore
@@ -1,15 +1,50 @@
-# Ignorando pastas
-/target/
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
 
-/.metadata/
-/.settings/
-# Ignorando arquivos
-.classpath
+# Eclipse Core
 .project
 
-# Para arquivos Java compilados
-*.class
-# Para código C
-*.so
-# Para todos os arquivos e sub-pastas localizados na pasta bower_components/
-bower_components/
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# PyDev specific (Python IDE for Eclipse)
+*.pydevproject
+
+# CDT-specific (C/C++ Development Tooling)
+.cproject
+
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
+# Java annotation processor (APT)
+.factorypath
+
+# PDT-specific (PHP Development Tools)
+.buildpath
+
+# sbteclipse plugin
+.target
+
+# Tern plugin
+.tern-project
+
+# TeXlipse plugin
+.texlipse
+
+# STS (Spring Tool Suite)
+.springBeans
+
+# Code Recommenders
+.recommenders/
